# ld45

./: Cargo.toml
assets/prefab/: player_animation.ron
assets/textures/: objects.ron  player.ron  terrain.ron
resources/: display.ron  input.ron  level1.tmx
src/: collision_world.rs  components.rs  entity_creators.rs  level1.rs  level2.rs  main.rs  tile.rs  tile_map.rs  tile_map_collision.rs  util.rs
src/systems/: animation.rs  collision.rs  hud.rs  input.rs  mod.rs  motion.rs
